Add accessibility feature to visually display sprite sounds as floating emojis